# docs/swagger.json
@@ -17,6 +17,52 @@
     },
     "host": "202.158.14.235:4222",
     "paths": {
+        "/api/v1/add/tm": {
+            "post": {
+                "description": "Check Component Tm1 Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TM1"
+                ],
+                "summary": "Check Component Tm1 Data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/check/tm": {
+            "post": {
+                "description": "Check Component Tm1 Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TM1"
+                ],
+                "summary": "Check Component Tm1 Data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/map": {
             "get": {
                 "description": "Get Map Html",
@@ -64,6 +110,29 @@
             }
         },
         "/api/v1/post/ratest": {
+            "post": {
+                "description": "Send Tm1 Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TM1"
+                ],
+                "summary": "Send Tm1 Data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/post/tm": {
             "post": {
                 "description": "Send Tm1 Data",
                 "consumes": [
